apps/opensearch-dashboards-config/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: opensearch-dashboards-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opensearch-dashboards
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`opensearch.shinbunbun.com`)
      kind: Rule
      middlewares:
        - name: opensearch-dashboards-headers
      services:
        - name: opensearch-dashboards
          port: 5601
